fix footer icons on mobile

--- a/src/styles/pages/_home.scss
+++ b/src/styles/pages/_home.scss
@@ -120,16 +120,25 @@
     display: flex;
     flex-wrap: wrap;
     margin-left: -1rem;
+    padding: 3rem 0 2rem 0;
 
     &-item img{
       display: block;
       width: 100%;
       max-width: 1.5rem;
+
+      @include breakpoint(md) {
+        max-width: 1.25rem;
+      }
     }
 
     &-link {
       display: inline-block;
       padding: 1rem;
+
+      @include breakpoint(md) {
+        padding: .75rem;
+      }
 
       &:hover {
         outline: 1px solid $green;
